k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: timetrkr-service
  labels:
    app: timetrkr
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: timetrkr

---
apiVersion: v1
kind: Service
metadata:
  name: timetrkr-nodeport
  labels:
    app: timetrkr
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: timetrkr
